--- a/ehc.html
+++ b/ehc.html
@@ -181,7 +181,7 @@ competence and quality
             <p>Click to know more.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="/#about">Call To Action</a>
+            <a class="cta-btn align-middle" href="https://emerginghumancapital.co.ke">Go To EHC</a>
           </div>
         </div>
 
