--- a/eqwipetrol.html
+++ b/eqwipetrol.html
@@ -205,7 +205,7 @@ our brand.
             <p>Click to know more.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="/#about">Call To Action</a>
+            <a class="cta-btn align-middle" href="https://eqwipetrol.com">Go To Eqwipetrol</a>
           </div>
         </div>
 
