--- a/fanaka.html
+++ b/fanaka.html
@@ -173,7 +173,7 @@ people, processes and governance.
             <p>Click to know more.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="/#about">Call To Action</a>
+            <a class="cta-btn align-middle" href="https://fanakamobile.com">Go To Fanaka Mobile</a>
           </div>
         </div>
 
