--- a/uzito.html
+++ b/uzito.html
@@ -188,7 +188,7 @@ requirements.
             <p>Click to know more.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="/#about">Call To Action</a>
+            <a class="cta-btn align-middle" href="https://uzitofoods.com">Go To Uzito Afya Foods</a>
           </div>
         </div>
 
