--- a/adam.html
+++ b/adam.html
@@ -182,7 +182,7 @@ best return rates in the market.
             <p>Click to know more.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="/#about">Call To Action</a>
+            <a class="cta-btn align-middle" href="http://adamcapital.co.ke">Go to ADAM</a>
           </div>
         </div>
 
