--- a/chanuka.html
+++ b/chanuka.html
@@ -189,7 +189,7 @@ order tracking services<br>
             <p>Click to know more.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="/#about">Call To Action</a>
+            <a class="cta-btn align-middle" href="https://chanukafintech.com">Go To Chanuka Marketplace</a>
           </div>
         </div>
 
