--- a/nguoyetu.html
+++ b/nguoyetu.html
@@ -187,7 +187,7 @@
             <p>Click to know more.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="/#about">Call To Action</a>
+            <a class="cta-btn align-middle" href="https://nguoyetu.com">Go To Nguo Yetu</a>
           </div>
         </div>
 
