--- a/rentpesa.html
+++ b/rentpesa.html
@@ -191,7 +191,7 @@ Wallet
             <p>Click to know more.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="/#about">Call To Action</a>
+            <a class="cta-btn align-middle" href="https://rentpesa.com">Go To RentPesa</a>
           </div>
         </div>
 
