--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">ECH</a></h1>
+      <h2 class="logo me-auto"><a href="index.html">Emerging Capital Holdings</a></h2>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -76,7 +76,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h1>Emerging Capital Holdings</h1>
+          <!-- <h1>Emerging Capital Holdings</h1> -->
           <h2>Emerging Capital Holdings is a multiindustry conglomerate incorporated in
             Kenya. ECH has made vast investments
             in various sectors of the economy with its
